[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://fonts/AmaticSC-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 360.0
margin_bottom = 320.0
custom_constants/separation = 24
alignment = 1

[node name="Message" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 360.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 1 )
text = "Примешь синюю таблетку — и сказке конец. 
Ты проснешься в своей постели и поверишь, что это был сон. 
Примешь красную таблетку — войдешь в страну чудес. Я покажу тебе, глубока ли кроличья нора."
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 360.0
margin_bottom = 274.0
custom_constants/separation = 24
alignment = 1

[node name="Again" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 126.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Ещё раз"

[node name="Red" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 150.0
margin_right = 213.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Красная"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.458824, 0.592157, 1, 1 )
margin_left = 237.0
margin_right = 294.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Синия"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Again" to="." method="_on_Again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Blue" to="." method="_on_Blue_pressed"]
